--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-tsparticles": "^2.12.2",
+    "tailwind-scrollbar": "^3.1.0",
     "tsparticles": "^3.5.0",
     "tsparticles-slim": "^2.12.0"
   },
